--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./src/css/main.css">
-  
+
   <title>Frontend Mentor | Advice generator app</title>
 </head>
+
 <body>
+  <h2>Advice #117</h2>
+  <p>"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
 
-  Advice #117
-
-  "It is easy to sit up and take notice, what's difficult is getting up and taking action."
-  
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
 </body>
+
 </html>
