--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./src/css/main.css">
 
-  <title>Frontend Mentor | Advice generator app</title>
+  <title>Advice generator app | Frontend Mentor</title>
 </head>
 
 <body>
