Add semantic tags and classes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 
 <body>
-  <h2>Advice #117</h2>
-  <p>"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
+  <main>
+    <article class="card">
+      <h2 class="card__id">Advice #117</h2>
+      <p class="card__advice">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
+    </article>
+  </main>
 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
