Add divider for mobile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <article class="card">
       <h2 class="card__id">Advice #117</h2>
       <p class="card__advice">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
+      <picture class="card_dividers">
+        <img class="card__divider" src="./src/assets/images/pattern-divider-mobile.svg" alt="">
+      </picture>
     </article>
   </main>
 
