Add dice button with image

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <picture class="card_dividers">
         <img class="card__divider" src="./src/assets/images/pattern-divider-mobile.svg" alt="">
       </picture>
+      <button class="card__button" type="button">
+        <img class="card__icon" src="./src/assets/images/icon-dice.svg" alt="">
+      </button>
     </article>
   </main>
 
