Change divider image on bigger screens

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h2 class="card__id">Advice #117</h2>
       <p class="card__advice">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
       <picture class="card_dividers">
+        <source srcset="./src/assets/images/pattern-divider-desktop.svg" media="(min-width: 768px)">
         <img class="card__divider" src="./src/assets/images/pattern-divider-mobile.svg" alt="">
       </picture>
       <button class="card__button" type="button">
