Add heading for screen readers

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <main>
+    <h1 class="sr-only">Advice generator app</h1>
     <article class="card">
       <h2 class="card__id">Advice #117</h2>
       <p class="card__advice">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
