--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+
+  <script src="./src/js/script.js"></script>
 </body>
 
 </html>
