--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <main>
     <h1 class="sr-only">Advice generator app</h1>
     <article class="card">
-      <h2 class="card__id">Advice #117</h2>
-      <p class="card__advice">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
+      <h2 class="card__id">Advice #<span class="js-card-id">117</span></h2>
+      <p class="card__advice js-card-advice">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
       <picture class="card_dividers">
         <source srcset="./src/assets/images/pattern-divider-desktop.svg" media="(min-width: 768px)">
         <img class="card__divider" src="./src/assets/images/pattern-divider-mobile.svg" alt="">
       </picture>
-      <button class="card__button" type="button">
+      <button class="card__button js-card-button" type="button">
         <img class="card__icon" src="./src/assets/images/icon-dice.svg" alt="">
       </button>
     </article>
