--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
     </article>
   </main>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer class="footer">
+    <p>
+      Challenge by <a class="footer__link" href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
+      Coded by <a class="footer__link" href="https://github.com/GracilianoOG">Gabriel</a>.
+    </p>
+  </footer>
 
   <script src="./src/js/script.js"></script>
 </body>
