--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <source srcset="./src/assets/images/pattern-divider-desktop.svg" media="(min-width: 768px)">
         <img class="card__divider" src="./src/assets/images/pattern-divider-mobile.svg" alt="">
       </picture>
-      <button class="card__button js-card-button" type="button">
+      <button class="card__button js-card-button" type="button" aria-label="Fetch random advice">
         <img class="card__icon" src="./src/assets/images/icon-dice.svg" alt="">
       </button>
     </article>
